testing/framework/resources/Functional/Passing/M7/avg.q
select avg(cast(m7voter.threecf.contributions as float)) from m7voter;
