testing/framework/resources/Functional/Failing/datetime/datetime68.q
select c_row, extract(Day from cast(c_time as time)) from basic;
